src/objects/Mesure_Prevention__c.object
<CustomObject>
    <fields>
        <fullName>CategorieMesurePrevention__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category Measurement Prevension</label>
        <referenceTo>Categorie_Mesure_Prevention__c</referenceTo>
        <relationshipName>Measures_Prevention</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risque__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk</label>
        <referenceTo>Risque__c</referenceTo>
        <relationshipName>Measures_Prevention</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>preventative measure</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>preventative measures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>